[gd_scene load_steps=9 format=3 uid="uid://dlrwyr45decns"]

[ext_resource type="Script" path="res://Scenes/UI/dialog_window.gd" id="1_8d30f"]
[ext_resource type="FontFile" uid="uid://2gbqajhfy4et" path="res://Assets/UI/menu ui/TTLakesCompressed-DemiBold.ttf" id="1_58ipg"]
[ext_resource type="Texture2D" uid="uid://cwaao5ppfrkoe" path="res://Assets/UI/dialogs/dialog window.png" id="1_k0278"]
[ext_resource type="FontFile" uid="uid://dog75r1i8nw53" path="res://Assets/Items/TTLakes-Medium.ttf" id="3_kkhe8"]
[ext_resource type="Texture2D" uid="uid://dcbvxdboqf7w6" path="res://Assets/UI/dialogs/dialog button.png" id="5_3k6sd"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_4rvbs"]
texture = ExtResource("1_k0278")

[sub_resource type="Theme" id="Theme_hrgea"]
Label/colors/font_color = Color(0.768627, 0, 0, 1)
Label/fonts/font = ExtResource("1_58ipg")
Panel/styles/panel = SubResource("StyleBoxTexture_4rvbs")
RichTextLabel/colors/default_color = Color(0, 0, 0, 1)
RichTextLabel/fonts/normal_font = ExtResource("3_kkhe8")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_0by6c"]
texture = ExtResource("5_3k6sd")

[node name="Control" type="Control"]
process_mode = 3
layout_mode = 3
anchor_top = 0.63
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -0.23999
offset_right = -1152.0
offset_bottom = -240.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_hrgea")
script = ExtResource("1_8d30f")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1152.0
offset_bottom = 240.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = 11.0
offset_right = 9720.0
offset_bottom = 2243.0
scale = Vector2(0.1, 0.1)
mouse_filter = 2

[node name="personName" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 450
text = "person"

[node name="dialogText" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 300
text = "Lorem ipsum	Lorem ipsum	Lorem ipsum	Lorem ipsum	Lorem ipsum	Lorem ipsum	Lorem ipsum	Lorem ipsum	Lorem ipsum	Lorem ipsum	Lorem ipsum	Lorem ipsum	Lorem ipsum	Lorem ipsum	Lorem ipsum	Lorem ipsum	Lorem ipsum	Lorem ipsum	Lorem ipsum	Lorem ipsum	"
fit_content = true

[node name="continue" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 995.0
offset_top = 177.0
offset_right = 1058.0
offset_bottom = 223.0
grow_horizontal = 0
grow_vertical = 0
theme_override_styles/normal = SubResource("StyleBoxTexture_0by6c")

[connection signal="pressed" from="continue" to="." method="_on_continue_pressed"]
